Added error messages for new DAO.
SVN-Revision: 19813

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2196,8 +2196,8 @@ system.error = System has encountered unexpected error. Please contact the admin
 
 # error no start with C- commonpackage
 # error no start with CU- commonpackage-util
-# error no start with D- DAO
-# error no start with S- SM
+# error no start with DB- DAO
+# error no start with S- Security Manager
 biz.delete.error=C10100~Error while deleting object.
 biz.insert.error=C10101~Error while inserting object.
 biz.multinsert.error=C10102~Error while inserting collection of objects.
@@ -2228,11 +2228,42 @@ impexp.oraexport.error=C10204~Error while Oracle export meta data.
 impexp.dbclose.error=C10205~Not able to close database connection.
 impexp.dbtype.error=C10206~Not able to get import/export class. Please make sure database type is correct.
 datatype.parse.error=C10207~There was a problem reading XML file.
-db.operation.error=D10100~Error in db operation.
+#This is generic message used in commonpackage, its not in DAO.
+db.operation.error=C10100~Error in db operation.
 sm.operation.error=S10100~Error in Security Manager Operation.
 pw.encrypt.error=1002~Password encryption error.
 user.not.auth=User is not authorized 
 csm.getinstance.error=CU10000~Not able to get csm Instance.
+
+#errors messages for DAO
+db.open.session.error=DB001~Problem occurred while opening database session or connection.
+db.close.conn.error=DB002~Problem Occurred while closing database connections.
+db.commit.error=DB003~Problem occurred while data committing to database.
+db.rollback.error=DB004~Problem occurred while data rollback.
+db.batch.initialization.error=DB005~Problem occurred while batch initialization.
+db.batch.size.issue=DB006~Batch size is not valid it is either 0 or not appropriate.
+db.table.name.empty=DB007~Table name is not valid it should not be empty.
+db.column.set.empty=DB008~Column set is not valid it should not be empty
+db.batch.insert.error=DB009~Problem occurred while batch insert.
+db.batch.commit.error=DB010~Problem occurred while batch commit.
+db.batch.close.error=DB011~Problem occurred while batch close.
+db.retrieve.data.error=DB012~Problem while retrieving data from database.
+db.update.data.error=DB013~Problem while updating data/changes to database.
+db.stmt.close.error=DB014~Problem while closing statement or prepared statement.
+db.stmt.creation.error=DB015~Problem Occurred while creation of statement or prepared statement.
+db.prepstmt.param.error=DB016~Invalid query or no value list empty.
+db.insert.data.error=DB017~Problem while inserting data/changes to database.
+db.delete.data.error=DB018~Problem while deleting data/changes to database.
+db.app.prop.parsing.exp=DB019~Problem while parsing ApplicationDAOProperties.xml.
+db.dao.init.error=DB020~Problem while initializing DAO instance.
+db.jdbcdao.init.error=DB021~Problem while initializing JDBCDAO instance.
+db.sessionfactory.init.error=DB022~Problem while creating session factory.
+db.conf.file.parse.error=DB023~Problem while parsing hibernate configuration file.
+db.parse.class.name=DB024~Problem while retrieving Fully Qualified class name.
+db.query.condition.gen.error= DB025~Problem during creation of condition part of query.
+db.date.parse.error=DB026~Problem while parsing date.
+db.dataType.invalid=DB027~Data type specified for batch insert is not valid.
+db.open.transaction.error=DB028~Problem while opening new transaction.
 
 dao.error=DAO related issues.
 sm.operation.error=Security Manager related issues.
