--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1,7 +1,7 @@
 ##############Suite Changes
 #Keys for View Identified Surgical Pathology Report
-viewSPR.participantInformation.title=Participant Information
-viewSPR.participantInformation.medicalIdentifiers=Medical Identifier(s)
+viewSPR.participantInformation.title=caT00001~Participant Information
+viewSPR.participantInformation.medicalIdentifiers=caT00002~Medical Identifier(s)
 viewSPR.identifiedReportInformation.title=Identified Report Information
 viewSPR.deIdentifiedReportInformation.title=De-Identified Report Information
 viewSPR.categoryHighlighter.title=Category Highlighter
@@ -2265,7 +2265,7 @@ db.date.parse.error=DB026~Problem while parsing date.
 db.dataType.invalid=DB027~Data type specified for batch insert is not valid.
 db.open.transaction.error=DB028~Problem while opening new transaction.
 
-dao.error=DAO related issues.
+dao.error=DB000~DAO related issues.
 sm.operation.error=Security Manager related issues.
 utility.error=Application utility method execution issues.
 de.error=Dynamic extension error.
