Added error code value
SVN-Revision: 20029

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -537,10 +537,10 @@ approveUser.newUsersNotFound=No new user records found.
 #--Error Keys Begins--
 errors.title=Error:
 errors.item={0}
-errors.item.required={0} is required.
+errors.item.required=catApp000001~{0} is required.
 error.phonenumber.format=Please enter valid {0}. The valid format is xxx-xxx-xxxx.
 error.faxnumber.format=Please enter valid {0}. The valid format is xxx-xxx-xxxx.
-errors.item.invalid={0} is invalid.
+errors.item.invalid=catApp000002~{0} is invalid.
 errors.one.item.required=At least one entry for {0} is required.
 errors.item.format=Please enter valid {0}.
 errors.distribution.protocol=No distribution protocol selected.
@@ -1853,7 +1853,7 @@ multiplespecimen.quantity=Quantity
 empty.message={0}
 
 #API related keys
-domain.object.null.err.msg {0} object is Null. Please enter valid object.
+domain.object.null.err.msg=catApp~{0} object is Null. Please enter valid object.
 specimen.object.null.err.msg {0} object is Null. Please give valid class to the specimen.
 collectionprotocol.collectionProtocolEvent=Collection Protocol Event
 specimen.collection.event.date=Collection Event's date
