added script to copy file 'ApplicationResources.properties'
SVN-Revision: 20162

--- a/caTissueSuite_Client/build.xml
+++ b/caTissueSuite_Client/build.xml
@@ -76,7 +76,7 @@
 	<target name="runJunitTestCases" depends="compile_junit_TestCases">
         <mkdir dir="${report.dir}/Nightly_Build_Report" />
 		<mkdir dir="${report.dir}/Nightly_Build_Report/Html_reports" />
-
+		<copyfile dest="${target.dir}/ApplicationResources.properties" src="../WEB-INF/src/ApplicationResources.properties"/>
 		
 		<junit printsummary="yes" fork="yes" haltonfailure="no">
 			<formatter type="xml" />
