added error code to error message.
SVN-Revision: 20455

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -114,12 +114,12 @@ errors.pathologicalStatus.required=Pathological Status Required
 errors.requestedQuantityBeNumeric.required=Please enter a valid quantity
 errors.order.alreadygiven=Order is already placed
 errors.order.properclass=Specimen class should be same as the Array Class
-errors.order.capacityless=Number of the items added is greater than the capacity of the array
-orderdistribution.distribution.notpossible.errmsg=Cannot distribute the order item as the derivative is not available in the system.
-orderdistribution.distribution.arrayNotCreated.errmsg=Cannot distribute the array as it is not yet created.
-orderdistribution.distribution.notpossibleForPatho.errmsg=Cannot distribute the order item as no Specimens are associated with the Pathological Case.
-orderdistribution.arrayPrep.notpossible.errmsg=Cannot change status to Ready for Array Preparation as derivative is not present in the system.
-orderdistribution.arrayPrep.notpossibleForPatho.errmsg=Cannot change status to Ready for Array Preparation as no Specimens are associated with the Pathological Case.
+errors.order.capacityless=caT00001~Number of the items added is greater than the capacity of the array
+orderdistribution.distribution.notpossible.errmsg=caT00001~Cannot distribute the order item as the derivative is not available in the system.
+orderdistribution.distribution.arrayNotCreated.errmsg=caT00001~Cannot distribute the array as it is not yet created.
+orderdistribution.distribution.notpossibleForPatho.errmsg=caT00001~Cannot distribute the order item as no Specimens are associated with the Pathological Case.
+orderdistribution.arrayPrep.notpossible.errmsg=caT00001~Cannot change status to Ready for Array Preparation as derivative is not present in the system.
+orderdistribution.arrayPrep.notpossibleForPatho.errmsg=caT00001~Cannot change status to Ready for Array Preparation as no Specimens are associated with the Pathological Case.
 
 app.array.distribute=Distribute
 
@@ -188,10 +188,10 @@ app.order.view Order View
 orderingsystem.email.subject.orderPlaced Acknowledgement For Successful Order Placement
 #orderingsystem.email.body.orderPlaced = The Order has been placed successfully.
 
-orderdistribution.quantity.required.errmsg Quantity is mandatory.
-orderdistribution.site.required.errmsg Site is mandatory.
-orderdistribution.status.errmsg Please insert correct OrderDetails Status.
-orderdistribution.quantity.format.errmsg Please enter the valid Quantity.
+orderdistribution.quantity.required.errmsg caT00001~Quantity is mandatory.
+orderdistribution.site.required.errmsg caT00001~Site is mandatory.
+orderdistribution.status.errmsg caT00001~Please insert correct OrderDetails Status.
+orderdistribution.quantity.format.errmsg caT00001~Please enter the valid Quantity.
 
 #Consent Tracking Module
 specimenCollectionGroupPage.add.title=Add Specimen Collection Group
