added error code to error message.
SVN-Revision: 20457

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -537,10 +537,10 @@ approveUser.newUsersNotFound=No new user records found.
 #--Error Keys Begins--
 errors.title=Error:
 errors.item={0}
-errors.item.required=catApp000001~{0} is required.
+errors.item.required={0} is required.
 error.phonenumber.format=Please enter valid {0}. The valid format is xxx-xxx-xxxx.
 error.faxnumber.format=Please enter valid {0}. The valid format is xxx-xxx-xxxx.
-errors.item.invalid=catApp000002~{0} is invalid.
+errors.item.invalid={0} is invalid.
 errors.one.item.required=At least one entry for {0} is required.
 errors.item.format=Please enter valid {0}.
 errors.distribution.protocol=No distribution protocol selected.
@@ -2266,9 +2266,9 @@ db.dataType.invalid=DB027~Data type specified for batch insert is not valid.
 db.open.transaction.error=DB028~Problem while opening new transaction.
 
 dao.error=DB000~DAO related issues.
-sm.operation.error=Security Manager related issues.
-utility.error=Application utility method execution issues.
-de.error=Dynamic extension error.
+sm.operation.error=SM00001~Security Manager related issues.
+utility.error=caT00001~caApplication utility method execution issues.
+de.error=DE00001~Dynamic extension error.
 clz.not.found.error=Class not found error. 
 
 #these properties are required for common Service Locator.
