Added error code to property file
SVN-Revision: 20458

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -826,7 +826,7 @@ link.Distribute=Distribute
 
 #--Security Messages Keys Begin--
 access.execute.action.denied=Access denied: You are not authorized to perform this operation.
-access.addedit.object.denied=Access denied to add/edit {1}. User does not have {2} privilege on {3}.
+access.addedit.object.denied=caT00001~Access denied to add/edit {1}. User does not have {2} privilege on {3}.
 access.edit.object.denied=Security Alert! Authorization denied for user: {0} to edit object: {1}
 access.use.object.denied=Security Alert! Authorization denied for user to use this container
 #--Security Messages Keys End--
@@ -2232,9 +2232,9 @@ datatype.parse.error=C10207~There was a problem reading XML file.
 db.operation.error=C10100~Error in db operation.
 sm.operation.error=S10100~Error in Security Manager Operation.
 pw.encrypt.error=1002~Password encryption error.
-user.not.auth=User is not authorized 
+user.not.auth=1003~User is not authorized 
 csm.getinstance.error=CU10000~Not able to get csm Instance.
-
+access.view.denied =C11101~Access denied ! User does not have privilege to view this information.
 #errors messages for DAO
 db.open.session.error=DB001~Problem occurred while opening database session or connection.
 db.close.conn.error=DB002~Problem Occurred while closing database connections.
@@ -2264,6 +2264,7 @@ db.query.condition.gen.error= DB025~Problem during creation of condition part of
 db.date.parse.error=DB026~Problem while parsing date.
 db.dataType.invalid=DB027~Data type specified for batch insert is not valid.
 db.open.transaction.error=DB028~Problem while opening new transaction.
+dao.method.without.implementation=DB029~There is no implementation for this method:Check again before calling this method.
 
 dao.error=DB000~DAO related issues.
 sm.operation.error=SM00001~Security Manager related issues.
