UserNotAuthorizedException related changes
SVN-Revision: 20539

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -540,7 +540,7 @@ errors.item={0}
 errors.item.required={0} is required.
 error.phonenumber.format=Please enter valid {0}. The valid format is xxx-xxx-xxxx.
 error.faxnumber.format=Please enter valid {0}. The valid format is xxx-xxx-xxxx.
-errors.item.invalid={0} is invalid.
+errors.item.invalid=caT00001~{0} is invalid.
 errors.one.item.required=At least one entry for {0} is required.
 errors.item.format=Please enter valid {0}.
 errors.distribution.protocol=No distribution protocol selected.
@@ -826,7 +826,7 @@ link.Distribute=Distribute
 
 #--Security Messages Keys Begin--
 access.execute.action.denied=Access denied: You are not authorized to perform this operation.
-access.addedit.object.denied=caT00001~Access denied to add/edit {1}. User does not have {2} privilege on {3}.
+access.addedit.object.denied=Access denied to add/edit {1}. User does not have {2} privilege on {3}.
 access.edit.object.denied=Security Alert! Authorization denied for user: {0} to edit object: {1}
 access.use.object.denied=Security Alert! Authorization denied for user to use this container
 #--Security Messages Keys End--
@@ -2024,15 +2024,15 @@ participant.registered.msg.events = Cannot edit events, Participant Registered
 participant.registered.msg.specimen = Cannot edit requirement specimen, Participant Registered
 participant.registered.msg.consents = Cannot delete consents, Participant Registered
 
-user.cannotCreateSuperAdmin = User does not have privilege to create Super Admin user.
+user.cannotCreateSuperAdmin = caT000001~User does not have privilege to create Super Admin user.
 user.siteIsRequired = Role and / or Site is required
 user.roleIsRequired = Role
-user.cannotEditOwnPrivileges = User cannot change own privileges.
-user.cannotCreateScientist = User does not have privilege to create a Scientist user. 
-cp.cannotChangePrivilegesOfPIOrCoord = User cannot change privileges of PI or Coordinator.
-#cp.siteIsRequired =  Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
-cp.siteIsRequired =  Cannot create a Collection Protocol without associating any sites and users. Please visit the Assign Privileges page for the same.
-user.roleNotFound = User Role details not found.
+user.cannotEditOwnPrivileges = caT000001~User cannot change own privileges.
+user.cannotCreateScientist =caT000001~User does not have privilege to create a Scientist user. 
+cp.cannotChangePrivilegesOfPIOrCoord = caT000001~User cannot change privileges of PI or Coordinator.
+cp.siteIsRequired =caT000001~Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
+cp.siteIsRequired =caT000001~Cannot create a Collection Protocol without associating any sites and users. Please visit the Assign Privileges page for the same.
+user.roleNotFound =caT000001~User Role details not found.
 sc.unableToFindContainer = Unable to find Storage Container.
 access.view.action.denied = Access denied ! User does not have privilege to view this information.
 pending.order.created = A pending order has been created with order name {0} for the items selected. If required, you can finish the distribution later from the pending order list
