changed for merging DE war in catissue Created tag as :-18_MAY_2009_FOR_CATISSUE_WITH_NEW_CP DE Branch:-CATEGORY_BRANCH_FOR_PCATISSUE_WITH_NEWCP
SVN-Revision: 20609

--- a/build.xml
+++ b/build.xml
@@ -537,6 +537,7 @@
 		<copy file="printservice_module.jar" todir="${zip.dir}" overwrite="true" />
 		<copy file="printservice_client.jar" todir="${zip.dir}" overwrite="true" />
 		<copy file="${base.dir}/WEB-INF/lib/PrintCatissueCore_Client.jar" todir="${zip.dir}" overwrite="true" />
+		<copy file="dynamicextensions.zip" todir="${zip.dir}" overwrite="true" />
 		<copy file="caTissuePrintWebService.war" todir="${zip.dir}" overwrite="true" />
 		<!--<copy file="shippingtracking.zip" todir="${zip.dir}" overwrite="true" />-->
 		<copy file="dynamicextensions.zip" todir="${zip.dir}" overwrite="true" />
