--- a/WEB-INF/src/AdvanceQuery.properties
+++ b/WEB-INF/src/AdvanceQuery.properties
@@ -14,4 +14,4 @@ searchMainmenu=<put name="mainmenu" value="/pages/mainMenu/Home.jsp" />
 
 # Other properties
 app.name=advQuery.app.name
-useFeature.addToList=false
+useFeature.addToList=true
