corrected error message handling.
SVN-Revision: 20634

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -826,7 +826,7 @@ link.Distribute=Distribute
 
 #--Security Messages Keys Begin--
 access.execute.action.denied=Access denied: You are not authorized to perform this operation.
-access.addedit.object.denied=Access denied to add/edit {1}. User does not have {2} privilege on {3}.
+access.addedit.object.denied=caT00001~Access denied to add/edit {0}. User does not have {1} privilege on {2}.
 access.edit.object.denied=Security Alert! Authorization denied for user: {0} to edit object: {1}
 access.use.object.denied=Security Alert! Authorization denied for user to use this container
 #--Security Messages Keys End--
@@ -1643,7 +1643,7 @@ errors.changePassword.sameAsNameSurnameEmail=New Password should not contain nam
 errors.phoneNumber.format=Please enter valid {0}.
 errors.zipCode.format=Please enter valid {0}. The valid format are xxxxx-xxxx or xxxxx
 Err.SMException.01=The Security Service encountered a fatal error occurred while {0} {1}. Please report this problem to the Administrator.
-Err.ConstraintViolation Submission failed since a {0} with the same {1} already exists.
+Err.ConstraintViolation caT00001~Submission failed since a {0} with the same {1} already exists.
 #-- Advance Query Keys --
 advanceQuery.title=Advance Search
 advanceQuery.defaultMessage=Select Node To Start
@@ -2025,7 +2025,7 @@ participant.registered.msg.specimen = Cannot edit requirement specimen, Particip
 participant.registered.msg.consents = Cannot delete consents, Participant Registered
 
 user.cannotCreateSuperAdmin = caT000001~User does not have privilege to create Super Admin user.
-user.siteIsRequired = Role and / or Site is required
+user.siteIsRequired = caT000001~Role and / or Site is required
 user.roleIsRequired = Role
 user.cannotEditOwnPrivileges = caT000001~User cannot change own privileges.
 user.cannotCreateScientist =caT000001~User does not have privilege to create a Scientist user. 
@@ -2280,3 +2280,7 @@ time.pattern=HH:mm:ss
 timestamp.pattern=yyyy-MM-dd-HH24.mm.ss.SSS
 min.year=1900
 max.year=9999
+
+collprot.title.exists = caT00001~Collection Protocol with the same Title already exists
+cde.init.issue = caT00001~"Failed to get CDE manager object, CDE Manager is not yet initialized."
+
