removed hard coded string from classes
SVN-Revision: 20819

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -599,11 +599,11 @@ errors.item.qtyInsufficient=The system cannot distribute available quantity amon
 errors.distribution.arrayAlreadyDistributed=The array is already distributed.
 errors.distribution.specimenArrayNotFound=The array was not found.
 errors.distribution.specimenNotFound=Specimen not found.
-errors.distribution.closedSpecimen=We cannot distribute a closed specimen
-errors.distribution.closedOrDisableSpecimen=We cannot distribute a closed/disable specimen
-errors.distribution.closedOrDisableSpecimenArray=We cannot distribute a closed/disable specimen Array
-errors.distribution.closedOrDisableSite=We cannot distribute a specimen to closed/disable Site
-errors.distribution.closedOrDisableDP=We cannot distribute a specimen to closed/disable Distribution Protocol
+errors.distribution.closedSpecimen=catApp001~We cannot distribute a closed specimen
+errors.distribution.closedOrDisableSpecimen=catApp001~We cannot distribute a closed/disable specimen
+errors.distribution.closedOrDisableSpecimenArray=catApp001~We cannot distribute a closed/disable specimen Array
+errors.distribution.closedOrDisableSite=catApp001~We cannot distribute a specimen to closed/disable Site
+errors.distribution.closedOrDisableDP=catApp001~We cannot distribute a specimen to closed/disable Distribution Protocol
 errors.lookup.params=Param cannot be null.
 errors.lookup.cutoff=Cut-off cannot be greater than the total points.
 errors.specimen.contains.subspecimen Cannot disable the specimen. The specimen contains sub-specimen.
@@ -1449,7 +1449,7 @@ distribution.distributedItem=Distributed Item(s)
 itemrecord.specimenId=Specimen ID
 itemrecord.quantity=Quantity
 errors.distribution.quantity Quantity entered is greater than the available quantity.
-errors.distribution.quantity.should.equal Quantity of ordered specimen should be equal to its available quantity.
+errors.distribution.quantity.should.equal= catApp001~Quantity of ordered specimen should be equal to its available quantity.
 errors.distribution.derivedspecimen.type.class Ordered specimen class and type should be same as requested class and type.
 errors.distribution.aliquots.created Aliquot(s) created for specimen {0}
 distribution.distributionType=Distributed Item
@@ -2033,9 +2033,9 @@ cp.cannotChangePrivilegesOfPIOrCoord = caT000001~User cannot change privileges o
 cp.siteIsRequired =caT000001~Access denied ! User cannot create a global CP. Please give privilege to atleast one user on your Site.
 cp.siteIsRequired =caT000001~Cannot create a Collection Protocol without associating any sites and users. Please visit the Assign Privileges page for the same.
 user.roleNotFound =caT000001~User Role details not found.
-sc.unableToFindContainer = Unable to find Storage Container.
-access.view.action.denied = Access denied ! User does not have privilege to view this information.
-pending.order.created = A pending order has been created with order name {0} for the items selected. If required, you can finish the distribution later from the pending order list
+sc.unableToFindContainer = caT000001~Unable to find Storage Container.
+access.view.action.denied = caT000001~Access denied ! User does not have privilege to view this information.
+pending.order.created = caT000001~A pending order has been created with order name {0} for the items selected. If required, you can finish the distribution later from the pending order list
 
 ########################################################-- For Shipping Tracking
 #-- Keys for labels on pages
@@ -2282,5 +2282,76 @@ min.year=1900
 max.year=9999
 
 collprot.title.exists = caT00001~Collection Protocol with the same Title already exists
-cde.init.issue = caT00001~"Failed to get CDE manager object, CDE Manager is not yet initialized."
+cde.init.issue = caT00001~Failed to get CDE manager object, CDE Manager is not yet initialized.
+audit.error = caT00001~Error while auditing.
+event.req = At least one event is required to create Collection Protocol
+spec.storage.missing = Container name is missing for specimen :{0}
+spec.storage.not.free = caT00001~The specimen {0} cannot be placed in container {1} since the position {2},{3} is not free
+incorrect.storage = caT00001~Please Select correct storage container
+user.not.auth.use.storage = caT00001~User is not authorized to use storage container {0}
+st.colosed = caT00001~Storage container is closed!
+status.collected = caT00001~Collection Status should be collected to allocate storage locations
+position.nt.changed = caT00001~Storage Position should not be changed while updating the specimen
+lineage.nt.changed = caT00001~Lineage should not be changed while updating the specimen
+clzz.nt.changed = caT00001~Class should not be changed while updating the specimen
+storage.nt.hold.spec = caT00001~This Storage Container cannot hold 	{0}  Specimen 
+invalid.label.barcode = caT00001~Invalid Label or Barcode for Parent Specimen :{0}
+label.mandatory = caT00001~Lable is a manadatory field
+msg.for.derived.spec = caT00001~(This message is for Derived Specimen {0} of Parent Specimen number )
+spec.nt.saved = caT00001~specimen number {0} cannot be saved. 
+child.nt.saved = caT00001~Cannot insert child specimen {0}, of specimen {1}.
+failed.saved = caT00001~Failed to save. 
+invalid.label = caT00001~Invalid Specimen with label {0}
+user.nt.auth.spec = caT00001~User not authorized to update specimens
+label.already.exits = caT00001~Label {0} is already exists!
+barcode.already.exits = caT00001~Barcode {0} is already exists.
+ext.mult.spec.nt.updated = caT00001~External identifier on multiple Specimen can not be inserted or updated
+insuff.avai.quan = caT00001~Insufficient Parent's Available Quantity
+req.spec.nt.edited = caT00001~The Specimen is Added as Requirement, this can not be edited!!
+failed.spec.details = caT00001~Failed to get specimen details
+no.spec.returned = caT00001~no specimen returned by hibernate
+child.nt.coll = caT00001~Child specimen can not be collected without collecting the parent specimen.
+spec.nt.held.by.storage = caT00001~This Storage Container cannot hold specimen of collection protocol {0}
+cp.nt.found = caT00001~This Collection Protocol not found
 
+
+cp.retrive.err = caT00001~Cannot retrieve Collection protocol, incorrect id {0}
+cp.incorrect.param = caT00001~Cannot retrieve Collection protocol incorrect parameter {0} = {1} 
+cp.shr.title.incorrect =caT00001~Cannot retrieve Short Title incorrect id {0}
+sm.priv.error = caT00001~error in checking privilge on {0}
+cnnot.close.site.with.spec = caT00001~Site contains specimens in the associated containers. Cannot close a site containing specimens.
+error.check.site.fr.spec = caT00001~Error while checking site for presence of specimens
+failed.find.scg = caT00001~Cannot find CP. Failed to find SCG for id {0}
+scg.id.null = caT00001~Cannot find CP. CPR for SCG id {0} is unexpectedly null.
+sm.err.prot.grp = caT00001~Error in getting rpotection group by name
+sm.err.csm.loc = caT00001~Error in getting csm group locator instance
+cpr.nt.null = caT00001~CPR cannot be null for SCG
+
+failed.ret.scg = caT00001~Failed to retrieve SCG, either Name or Identifier is required
+spec.moved.diff.loc = caT00001~Specimen {0} had been moved to another location! Updated the locations. Please redo the transfers.
+storage.con.full = caT00001~The Storage Container you specified is full
+
+de.assgn.priv.site = caT00001~Error : First de-assign privilege of the Parent Site with system identifier {0}
+de.assgn.priv.container = caT00001~Error : First de-assign privilege of the Parent Container with system identifier {0}
+sm.check.priv = caT00001~Error in checking has privilege
+assign.data.error = caT00001~Data error
+
+storage.info.nt.found =  caT00001~Storagecontainer information not found!
+storage.full = caT00001~Either Storagecontainer is full! or it cannot accomodate all the specimens.
+storage.container.has.nt.enough.space  = The container you specified does not have enough space to allocate storage position for Container Number {0}
+			
+spec.not.compatible =  caT00001~Please add compatible specimens to specimen array (belong to same specimen class & specimen types of Array)				
+quantity.more.then.distri.quantity = caT00001~Quantity {0} should be less than current Distributed Quantity {1} of specimen :: {2}
+
+enter.quantity.mol.spec = caT00001~Please enter quantity for Molecular Specimen ----> {0}
+spec.array.should.contain.atleast.one.spec = caT00001~Specimen Array should contain at least one specimen
+spec.array.spec.invalid = caT00001~Please enter valid specimen for specimen array!! Specimen is closed/disabled {0} 
+spec.array.spec.does.nt.exists = caT00001~Please enter valid specimen for specimen array!!specimen does not exist {0} 
+spec.array.null = caT00001~Specimen Array for uploading is null
+storage.specified.full = caT00001~The Storage Container you specified is full
+
+pwd.encrytion.error = caT00001~Error while encrypting password.
+de.error = caT00001~Dynamic extension error.
+role.nt.retrieved = caT00001~Could not get the role
+name.generator.exp = Name generator exception.
+class.notFound.exp = Class not found exception
