changes related to error messages.
SVN-Revision: 20830

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2080,7 +2080,18 @@ shipment.storage.location=Storage Location
 shipment.receiver.comments=Comments
 shipment.specimenContainerRequired=In shipment either specimens or containers, or both
 shipment.specimenSiteValidation=In shipment,Sender's site and Receiver's Site can't be same.
-
+shipment.specimenContainerValidation = caT00001~ <li>Specimen {0} is currently stored in {1} You cannot include a specimen or container in a shipment stored in some other site as the requester's site.</li>
+shipmentRequest.specimenContainerValidation = caT00001~ <li>Specimen {0} is currently stored in {1}. You cannot request for a specimen or container stored in the same site as requester's site.</li>
+shipment.virtual.specimen = caT00001~ <li>Specimen with name {0} is virtually located and cannot be a part of the shipment</li>
+shipment.NoSpecimenExists = caT00001~ <li>No specimen with name {0} exists</li>
+shipment.NoContainerExists = caT00001~ <li>No Container with name or barcode {0} exists\n</li>
+shipment.emptyShipment = caT00001~ <li>Shipment is empty.</li>
+shipment.containerValidation = caT00001~ <li> {0} is currently stored in {1} .You cannot include a specimen or container in a shipment stored in some other site as the requester's site.</li>
+shipment.container.RequestingSite = caT00001~ <li>Container {0} belongs to the Requesting Site.</li>
+shipment.containerInShipment = caT00001~ <li> {0} is currently included in a Shipment. You cannot request for a specimen or container that has been included in a shipment.</li>
+shipment.specimenInShipment = caT00001~ <li> {0} is currently included in a Shipment. You cannot request for a specimen or container that has been included in a shipment.</li>
+shipment.specimenInRequestingSite = caT00001~ <li>Specimen {0} belongs to the Requesting Site.</li>
+shipment.noSpecimenInRequest = caT00001~ <li>Request doesn't contain any specimens of containers.</li>
 #-- Uncomment when in SNT
 buttons.reject=Reject  
 buttons.create.shipment=Create Shipment
