exception throw changes.
SVN-Revision: 20943

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2366,3 +2366,10 @@ de.error =  Dynamic extension error.
 role.nt.retrieved =  Could not get the role
 name.generator.exp = Name generator exception.
 class.notFound.exp = Class not found exception
+number.format.exp = Issue while parsing number
+cache.exp = Problem while chaching
+parent.container.not.valid = Parent Container is not valid for this container type.
+obj.not.instanceof.specimen = object is not instanceof specimen.
+error.privileges.from.given.role = Error while getting privileges from given role.
+hibernate.exception = Hibernate Exception.
+SQL.exp = Error while executing query.
